Partially fix divs with border-radius bleeding into their borders
Now there's the opposite problem: The border / item gets clipped
correctly, but it always has a slight distance to the actual border
at the edges of the div. Still better than before, but not ideal.

--- a/examples/xml/xml.css
+++ b/examples/xml/xml.css
@@ -1,22 +1,22 @@
 body {
-    width: 100%;
-    height: 100%;
+    background: yellow;
+}
+
+#green {
+    width: 100px;
+    height: 50px;
+    background: green;
+    border: 5px solid black;
+    border-radius: 10px;
+    box-sizing: content-box;
 }
 
 #red {
     width: 100px;
-    height: 100px;
-    background: linear-gradient(503deg, red, blue);
-    border-radius: 10px;
+    height: 50px;
+    background: red;
 }
 
-#green {
-    width: 50%;
-    height: 40px;
-    bottom: 10%;
-    background: green;
-    border: 4px solid rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    box-shadow: 0px 0px 40px black;
-    box-sizing: border-box;
+p {
+    position: fixed;
 }
